# gzdx

./: .condarc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
gzdx/: __init__.py  __main__.py  config.py  logger.py
gzdx/cli/: main.py
gzdx/models/: __init__.py
gzdx/utils/: helpers.py
tests/: conftest.py  test_cli.py  test_config.py  test_helpers.py  test_main.py
