[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gzdx"
version = "0.1.0"
description = "gzdx - Python project framework"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
gzdx = "gzdx.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gzdx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["gzdx"]

[tool.coverage.report]
show_missing = true
fail_under = 80
